Added some code to response handler

--- a/client/client.html
+++ b/client/client.html
@@ -147,7 +147,7 @@
   </div>
 
   <div id="controls">
-    <h3>Create Theme</h3>
+    <h3>Create A Theme</h3>
     <select id="themeSelect">
         <option value="/getFiveColor">Five Color</option>
         <option value="/getTwoTone">Two Tone</option>
@@ -155,9 +155,9 @@
     </select>
     <input id="file" type="file" class="inputfile"/>
     
-    <h3>Save Theme</h3>
+    <h3>Save Your Theme</h3>
     <form id="loadForm" action="/getSavedTheme" method="get">
-      <label for="keyword">Keyword: </label>
+      <label for="keyword">Name: </label>
       <input id="keywordField" type="text" name="keyword"/>
       <input type="submit" value="Load"/>
       <input type="submit" value="Save"/>
